[gd_scene load_steps=5 format=1]

[ext_resource path="res://Menus/M-Principal/base.gd" type="Script" id=1]
[ext_resource path="res://Menus/M-Principal/Imagenes/Creditos.png" type="Texture" id=2]
[ext_resource path="res://Menus/M-Principal/Imagenes/Controles.png" type="Texture" id=3]
[ext_resource path="res://Menus/M-Principal/Imagenes/Play.png" type="Texture" id=4]

[node name="M-Principal" type="Control"]

hint/tooltip = "Menu principal\n"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Menu principal" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 62.0
margin/top = 61.0
margin/right = 102.0
margin/bottom = 75.0
text = "Menu principal"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Creditos" type="Button" parent="."]

hint/tooltip = "Boton"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 45.0
margin/right = 476.0
margin/bottom = 187.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = true

[node name="Controles" type="Button" parent="."]

hint/tooltip = "Boton"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 253.0
margin/top = 259.0
margin/right = 521.0
margin/bottom = 401.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = true

[node name="Play" type="Button" parent="."]

hint/tooltip = "Boton Play"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 23.0
margin/top = 283.0
margin/right = 244.0
margin/bottom = 485.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = true
clip_text = true

[connection signal="pressed" from="Creditos" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Controles" to="." method="_on_Controles_pressed"]

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]


